Added the Quick widget 'styled-text-area', which is a text area with content whose style is easily and intuitively controlled.  Also implemented standard mouse cursors in Quick style.  Integrated these into QWYSIWYG